--- a/myWebsite/index.html
+++ b/myWebsite/index.html
@@ -23,9 +23,8 @@
                 <ul>
                     <li>
                         <ul>Software Developer
-                            <li>1</li>
-                            <li>2</li>
-                            <li>3</li>
+                            <li>Experience working on the Power BI platform for Microsoft</li>
+                            <li>Pursuing Bachelors in Computer Science at CSU San Marcos
                         </ul>
                     </li>
 
