Updating Nav Bar
Updating Nav Bar

--- a/myWebsite/index.html
+++ b/myWebsite/index.html
@@ -64,10 +64,10 @@
     </ul>
 
     <div class="sidebar">
-        <a href="" />Home</a>
-        <a href="" />Research</a>
-        <a href="" />Teaching</a>
-        <a href="" />Useful Links</a>
+        <a href="https://cj-ledet.github.io/myWebsite/" />Home</a>
+        <a href="https://github.com/cj-ledet/" />My Github</a>
+        <a href="https://www.linkedin.com/in/cjledet/" />My LinkedIn</a>
+        <a href="https://www.youtube.com/" />Favorite Site</a>
     </div>
 
 </body>
