--- a/myWebsite/index.html
+++ b/myWebsite/index.html
@@ -64,9 +64,9 @@
     </ul>
 
     <div class="sidebar">
-        <a href="https://cj-ledet.github.io/myWebsite/" />Home</a>
-        <a href="https://github.com/cj-ledet/" />My Github</a>
-        <a href="https://www.linkedin.com/in/cjledet/" />My LinkedIn</a>
+        <a href="https://cj-ledet.github.io/myWebsite/" />Home</a><br>
+        <a href="https://github.com/cj-ledet/" />My Github</a><br>
+        <a href="https://www.linkedin.com/in/cjledet/" />My LinkedIn</a><br>
         <a href="https://www.youtube.com/" />Favorite Site</a>
     </div>
 
