--- a/Booth/index.html
+++ b/Booth/index.html
@@ -24,11 +24,46 @@
     </header>
 
     <section>
-        <div class="wrapper">
-            
-            <h2 class="section-title">Ticket Display Here</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit, eaque aut ut delectus quos aliquam repellat, architecto deserunt exercitationem dicta fuga inventore non animi rem recusandae ipsa laboriosam earum alias.</p>
-
+        <div>
+            <table class="styled-table">
+                <thead>
+                    <tr>
+                        <th>Ticket ID</th> <th>Subject</th> <th>Severity</th> <th>Creator</th> <th>Date Created</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr href="#test">
+                        <td>01</td> <td>Printer Error</td> <td>B</td> <td>Captain America</td> <td>MAR 13, 2023</td>
+                    </tr>
+                    <tr>
+                        <td>02</td> <td>Network Issues</td> <td>A</td> <td>Ironman</td> <td>MAR 18, 2023</td>
+                    </tr>
+                    <tr>
+                        <td>03</td> <td>Laptop Screen</td> <td>B</td> <td>Wonder Woman</td> <td>MAR 11, 2023</td>
+                    </tr>
+                    <tr>
+                        <td>04</td> <td>Firewall Issues</td> <td>B</td> <td>James Bond</td> <td>MAR 16, 2023</td>
+                    </tr>
+                    <tr>
+                        <td>05</td> <td>Printer</td> <td>C</td> <td>Jonas Adams</td> <td>MAR 13, 2023</td>
+                    </tr>
+                    <tr>
+                        <td>06</td> <td>Printer</td> <td>C</td> <td>Jonas Adams</td> <td>MAR 13, 2023</td>
+                    </tr>
+                    <tr>
+                        <td>07</td> <td>Printer</td> <td>C</td> <td>Jonas Adams</td> <td>MAR 13, 2023</td>
+                    </tr>
+                    <tr>
+                        <td>08</td> <td>Printer</td> <td>C</td> <td>Jonas Adams</td> <td>MAR 13, 2023</td>
+                    </tr>
+                    <tr>
+                        <td>09</td> <td>Printer</td> <td>C</td> <td>Jonas Adams</td> <td>MAR 13, 2023</td>
+                    </tr>
+                    <tr>
+                        <td>10</td> <td>Printer</td> <td>C</td> <td>Jonas Adams</td> <td>MAR 13, 2023</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </section>
 
