--- a/Booth/index.html
+++ b/Booth/index.html
@@ -17,54 +17,15 @@
                     <div class="logo-fg"> Booth </div>
                 </div>    
             </li>
-            <li><a href="#home">Dashboard</a></li>
-            <li><a href="#Account">Account</a></li>
+            <li><a href="dashboard.html">Dashboard</a></li>
+            <li><a href="account.html">Account</a></li>
             <li style="float: right;"><a href="https://booth-auth.auth.us-west-1.amazoncognito.com/login?client_id=2l3ebv8g94a6m326i26agcoc5a&response_type=code&scope=email+openid+phone&redirect_uri=http%3A%2F%2Flocalhost%3A8000%2Findex.html">Login</a></li>
           </ul>
     </header>
 
     <section>
-        <div>
-            <table class="styled-table">
-                <thead>
-                    <tr>
-                        <th>Ticket ID</th> <th>Subject</th> <th>Severity</th> <th>Creator</th> <th>Date Created</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr href="#test">
-                        <td>01</td> <td>Printer Error</td> <td>B</td> <td>Captain America</td> <td>MAR 13, 2023</td>
-                    </tr>
-                    <tr>
-                        <td>02</td> <td>Network Issues</td> <td>A</td> <td>Ironman</td> <td>MAR 18, 2023</td>
-                    </tr>
-                    <tr>
-                        <td>03</td> <td>Laptop Screen</td> <td>B</td> <td>Wonder Woman</td> <td>MAR 11, 2023</td>
-                    </tr>
-                    <tr>
-                        <td>04</td> <td>Firewall Issues</td> <td>B</td> <td>James Bond</td> <td>MAR 16, 2023</td>
-                    </tr>
-                    <tr>
-                        <td>05</td> <td>Printer</td> <td>C</td> <td>Jonas Adams</td> <td>MAR 13, 2023</td>
-                    </tr>
-                    <tr>
-                        <td>06</td> <td>Printer</td> <td>C</td> <td>Jonas Adams</td> <td>MAR 13, 2023</td>
-                    </tr>
-                    <tr>
-                        <td>07</td> <td>Printer</td> <td>C</td> <td>Jonas Adams</td> <td>MAR 13, 2023</td>
-                    </tr>
-                    <tr>
-                        <td>08</td> <td>Printer</td> <td>C</td> <td>Jonas Adams</td> <td>MAR 13, 2023</td>
-                    </tr>
-                    <tr>
-                        <td>09</td> <td>Printer</td> <td>C</td> <td>Jonas Adams</td> <td>MAR 13, 2023</td>
-                    </tr>
-                    <tr>
-                        <td>10</td> <td>Printer</td> <td>C</td> <td>Jonas Adams</td> <td>MAR 13, 2023</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+        <!--HomePage View-->
+        <h1 style="text-align: center;">HomePage Coming Soon</h1>
     </section>
 
 </body>
