Latest Project Version
Latest Project Version

--- a/Booth/about.html
+++ b/Booth/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booth Ticket Tracker</title>
     <link rel="stylesheet" href="src/style.css">
+
 </head>
 <body>
     
@@ -17,16 +18,15 @@
                     <div class="logo-fg"> Booth </div>
                 </div>    
             </li>
-            <li><a href="dashboard.html">Dashboard</a></li>
-            <li><a href="account.html">Account</a></li>
-            <li style="float: right;"><a href="https://booth-auth.auth.us-west-1.amazoncognito.com/logout?client_id=5mf6bbtjmgbtloo8hldkt89roj&logout_uri=http%3A%2F%2Flocalhost%3A8000%2Findex.html">Logout</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li style="float: right;"><a href="login.html">Login</a></li>
           </ul>
     </header>
 
     <section>
-        <!--Account View-->
-        <h1 style="text-align: center;">Account View Coming Soon</h1>
+        <h1>About Page Coming Soon</h1>
     </section>
-
+    
 </body>
 </html>
