--- a/Booth/dashboard.html
+++ b/Booth/dashboard.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booth Ticket Tracker</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
     
@@ -19,7 +19,7 @@
             </li>
             <li><a href="dashboard.html">Dashboard</a></li>
             <li><a href="account.html">Account</a></li>
-            <li style="float: right;"><a href="https://booth-auth.auth.us-west-1.amazoncognito.com/login?client_id=2l3ebv8g94a6m326i26agcoc5a&response_type=code&scope=email+openid+phone&redirect_uri=http%3A%2F%2Flocalhost%3A8000%2Findex.html">Login</a></li>
+            <li style="float: right;"><a href="https://booth-auth.auth.us-west-1.amazoncognito.com/logout?client_id=5mf6bbtjmgbtloo8hldkt89roj&logout_uri=http%3A%2F%2Flocalhost%3A8000%2Findex.html">Logout</a></li>
           </ul>
     </header>
 
