--- a/Booth/login.html
+++ b/Booth/login.html
@@ -18,15 +18,25 @@
                     <div class="logo-fg"> Booth </div>
                 </div>    
             </li>
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li style="float: right;"><a href="login.html">Login</a></li>
           </ul>
     </header>
 
-    <section>
-        <h1>Home Page Coming Soon</h1>
-    </section>
+    <div class="loginbox">
+		<h1>Login</h1>
+		<form id="login-form">
+			<p>Username</p>
+			<input type="text" id="username" name="username" placeholder="Enter Username" required>
+			<p>Password</p>
+			<input type="password" id="password" name="password" placeholder="Enter Password" required>
+			<a href="#"><input type="submit" name="" value="Login"></a>
+			<a href="forgotpassword.html">Forgot Password</a><br>
+			<a href="signup.html">Don't have an account? Signup here</a>
+		</form>
+	</div>
 
+    <script src="../dist/main.js"></script>
+    
 </body>
 </html>
